Add functionality to user interface that accounts for user not entering anything into form

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-1.12.0.js"></script>
     <script src="js/scripts.js"></script>
-    <title>Traingle Tracker</title>
+    <title>Triangle Tracker</title>
   </head>
   <body>
     <div class="container">
@@ -28,6 +28,7 @@
         <button type="submit" class="btn">Find out!</button>
       </form>
 
+      <br>
       <div id="result">
         <p>The dimensions you entered <span class="triangleType"></span> triangle.</p>
       </div>
